# ImageComparisionPy

./: compare.py  pyproject.toml  run.bat
