[tool.poetry]
name = "imagecomparisionpy"
version = "0.1.0"
description = "tool to compare two images"
authors = ["ShanKonduru <ShanKonduru@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^10.2.0"
opencv-python = "^4.9.0.80"
cv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
cv = "^1.0.0"
pillow = "^10.2.0"
opencv-python = "^4.9.0.80"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
